@@ -1,6 +1,6 @@
 {
   "name":    "simp-at",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author":  "SIMP Team",
   "summary": "A SIMP Puppet module for managing at",
   "license": "Apache-2.0",
