@@ -3,21 +3,6 @@ require 'spec_helper_acceptance'
 test_name 'at'
 
 describe 'at class' do
-  before(:context) do
-    hosts.each do |host|
-      interfaces = fact_on(host, 'interfaces').strip.split(',')
-      interfaces.delete_if do |x|
-        x =~ /^lo/
-      end
-
-      interfaces.each do |iface|
-        if fact_on(host, "ipaddress_#{iface}").strip.empty?
-          on(host, "ifup #{iface}", :accept_all_exit_codes => true)
-        end
-      end
-    end
-  end
-
   let(:manifest) {
     <<-EOS
       include 'at'
@@ -34,6 +19,5 @@ describe 'at class' do
         apply_manifest_on(host, manifest, :catch_changes => true)
       end
     end
-
   end
 end
