@@ -10,12 +10,12 @@ describe 'at::user' do
 
         context 'with default parameters' do
           let(:title) { 'foobar' }
-          it { is_expected.to create_simpcat_fragment('at+foobar.user') }
+          it { is_expected.to create_simpcat_fragment('at+foobar.user').with_content("#{title}\n") }
         end
 
         context 'with a name that requires substitution' do
           let(:title) { 'foo/bar' }
-          it { is_expected.to create_simpcat_fragment('at+foo__bar.user') }
+          it { is_expected.to create_simpcat_fragment('at+foo__bar.user').with_content("#{title}\n") }
         end
 
       end
